# yuichan

./: CLAUDE.md  EXAMPLES.md  MANIFEST.in  PUBLISHING.md  README.md  claude.py  pyproject.toml  yuiast.py
docs/: API_en.md  syntax_en.md
emoji/: 85_add.yui
humaneval/: 100_make_a_pile.yui  101_words_string.yui  103_rounded_avg.yui  104_unique_digits.yui  105_by_length.yui  106_f.yui  107_even_odd_palindrome.yui  108_count_nums.yui  109_move_one_ball.yui  10_make_palindrome.yui  111_histogram.yui  112_reverse_delete.yui  113_odd_count.yui  117_select_words.yui  118_get_closest_vowel.yui  119_match_parens.yui  11_string_xor.yui  120_maximum.yui  123_get_odd_collatz.yui  124_valid_date.yui  125_split_words.yui  126_is_sorted.yui  128_prod_signs.yui  129_minPath.yui  130_tri.yui  132_is_nested.yui  133_sum_squares.yui  134_check_if_last_char_is_a_letter.yui  136_largest_smallest_integers.yui  137_compare_one.yui  140_fix_spaces.yui  143_words_in_sentence.yui  144_simplify.yui  145_order_by_points.yui  147_get_max_triples.yui  148_bf.yui  149_sorted_list_sum.yui  14_all_prefixes.yui  152_compare.yui  153_Strongest_Extension.yui  (+52 more)
webapp/: kogi.html  yui_bundle.js  yui_editor.html
yuichan/: __init__.py  _colab.py  emoji.json  main.py  message.py  message_ja.py  notebook.py  syntax-py.json  syntax-yui.json  test.ipynb  test_ast.py  test_ast0.py  test_coding.py  test_emoji.py  test_example.py  test_parser.py  test_parser_bugs.py  test_parser_emoji.py  test_parser_pylike.py  test_parser_yui.py  test_pattern.py  test_roundtrip.py  test_runtime.py  test_stdlib.py  test_types.py  test_x_emoji.py  test_x_nannan.py  test_x_plain.py  test_x_yui.py  test_yuiast.py  test_yuiemit.py  test_yuiparser.py  yui_cli.py  yuiast.py  yuicoding.py  yuierror.py  yuiexample.py  yuiparser.py  yuiruntime.py  yuistdlib.py  (+2 more)
yuichan/syntax/: ast.json  emoji.json  jslike.json  nannan.json  plain.json  pylike.json  s.json  sexpr.json  test_bridget.py  test_emoji.py  test_jslike.py  test_nannan.py  test_pylike.py  test_sexpr.py  test_wenyan.py  test_x_bridget.py  test_x_jslike.py  test_x_pylike.py  test_x_sexpr.py  test_x_yui.py  test_x_zup.py  test_zup.py  wenyan.json  yui.json  zup.json
yuijs/: README.md  package-lock.json  package.json  vitest.config.js
yuijs/scripts/: build-browser.js  build-grammars.js
yuijs/src/: browser_entry.js  index.js  main.js  yuiast.js  yuicoding.js  yuierror.js  yuiexample.js  (+6 more)
(+38 files in other folders)
